<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="56dp">

    <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:id="@+id/file_icon"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/file_icon"
            android:src="@drawable/ic_file"
            android:alpha="0.54"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:ellipsize="end"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toEndOf="@+id/file_icon"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="9dp"
            android:text="@string/filename"
            android:id="@+id/file_name"
            android:textColor="@color/highEmphasis"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:ellipsize="end"
            app:layout_constraintStart_toEndOf="@+id/file_icon"
            app:layout_constraintStart_toStartOf="@+id/file_name"
            app:layout_constraintTop_toBottomOf="@+id/file_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textSize="12sp"
            android:id="@+id/file_description"
            android:text="@string/description"/>

    <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/lowEmphasis"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/file_description"/>
</androidx.constraintlayout.widget.ConstraintLayout>