<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:strokeColor="#26000000"
        app:strokeWidth="1dp"
        app:cardBackgroundColor="#FFFFFF"
        app:cardForegroundColor="#00FFFFFF"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <FrameLayout
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:id="@+id/status_container"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintEnd_toStartOf="@+id/favourite_icon"
                android:layout_marginEnd="8dp"
                app:layout_constraintHorizontal_bias="0.0">

            <TextView
                    android:text="@string/up_to_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3"
                    android:textAllCaps="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:fontFamily="sans-serif-medium"
                    android:layout_marginTop="4dp"/>
        </FrameLayout>

        <TextView
                android:text="@string/repository_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/name"
                app:layout_constraintTop_toBottomOf="@id/status_container"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:fontFamily="sans-serif"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                android:lines="1"
                android:ellipsize="end"/>

        <TextView
                android:text="@string/lorem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/description"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/name"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                android:lines="2"
                android:ellipsize="end"/>

        <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:srcCompat="@drawable/ic_star"
                android:id="@+id/favourite_icon"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp"
                android:alpha="0.54"
                android:contentDescription="@string/favourite_icon"
                android:visibility="invisible"/>

        <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/commit_container"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description"
                android:layout_marginTop="16dp">

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>